--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,21 @@
 {
   "compilerOptions": {
-    "lib": ["ES2019"],
+    "lib": ["ES2021"],
     "module": "commonjs",
-    "target": "ES2019",
-    "declaration": true,
+    "target": "ES2021",
     "removeComments": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "./dist",
     "incremental": true,
-    "strict": true
-  },
-  "include": ["src", "__tests__"]
+    "skipLibCheck": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "typeRoots": ["src/typings", "node_modules/@types"],
+    "declaration": true
+  }
 }
