--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["ES2021"],
-    "module": "commonjs",
-    "target": "ES2021",
+    "lib": ["ES2022"],
+    "module": "node16",
+    "target": "ES2022",
     "removeComments": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
